evaluations/evaluation1/Joueur.java.txt
allumettes/Joueur.java:22: error: non-static method getNombreAllumettes() cannot be referenced from a static context
            case 2: toWithdraw = Math.max (3, Jeu.getNombreAllumettes());
                                                 ^
1 error
